# parseweb

./: .gitignore  CMakeLists.txt  README.md
include/: ChapterGroup.h  parseweb.h  web.h
src/: ChapterGroup.cpp  example.txt  main.cpp  parseweb.cpp  web.cpp  webmob.cpp  webpc.cpp
